<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.Dotson</groupId>
    <artifactId>Dotson</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>
    <name>Dotson</name>
    <properties>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.21.0.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.jboss.spec.javax.ws.rs/jboss-jaxrs-api_2.0_spec -->
        <dependency>
            <groupId>org.jboss.spec.javax.ws.rs</groupId>
            <artifactId>jboss-jaxrs-api_2.0_spec</artifactId>
            <version>1.0.1.Final</version>
            <scope>provided</scope>
        </dependency>
        <!--https://mvnrepository.com/artifact/org.apache.openejb/tomee-jaxrs--> 
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>tomee-jaxrs</artifactId>
            <version>7.0.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <version>7.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>tomee-embedded</artifactId>
            <version>7.0.4</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
        <dependency>
            <groupId>javax.ws.rs</groupId>
            <artifactId>javax.ws.rs-api</artifactId>
            <version>2.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-web-api</artifactId>
            <version>7.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>4.0.0</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArguments>
                        <endorseddirs>${endorsed.dir}</endorseddirs>
                    </compilerArguments>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${endorsed.dir}</outputDirectory>
                            <silent>true</silent>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>javax</groupId>
                                    <artifactId>javaee-endorsed-api</artifactId>
                                    <version>7.0</version>
                                    <type>jar</type>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>
			
            <plugin>
                <groupId>org.apache.tomee.maven</groupId>
                <artifactId>tomee-embedded-maven-plugin</artifactId>
                <version>7.0.4</version>
                <configuration>
                    <tomeeversion>7.0.4</tomeeversion>
                    <tomeeclassifier>plume</tomeeclassifier>
                    <tomeeHost>localhost</tomeeHost>
                    <tomeeHttpPort>8080</tomeeHttpPort>
                    <path>/Deploy</path>
                    <debug>false</debug>
                    <debugPort>5005</debugPort>
                    <config>${project.basedir}/src/test/tomee/conf</config>
                    <webapps>
                        <webapp>com.Dotson:Dotson:1.0-SNAPSHOT?name=Dotson</webapp>
                    </webapps>
                    <systemProperties>
                        <systemVariables>
                            <openejb.system.apps>true</openejb.system.apps>
                            <tomee.serialization.class.blacklist>-</tomee.serialization.class.blacklist>
                        </systemVariables>
                    </systemProperties>
                    <synchronization>
                        <extensions>
                            <!-- To update each time app built with mvn compile -->
                            <extension>.class</extension>
                            <extension>.properties</extension>
                            <extension>.css</extension>
                        </extensions>
                        <updateInterval>2</updateInterval>
                    </synchronization>
                    <!-- For some reason, must to be false or reloading does not work! -->
                    <!-- <reloadOnUpdate>false</reloadOnUpdate> -->
                    <warFile>
                        ${project.build.directory}/${project.build.finalName}
                    </warFile>
                    <!-- path used by tomEE in the tomee:deploy and tomee:undeploy goals -->
                    <path>
                        ${project.build.directory}/apache-tomee/webapps${project.build.finalName}
                    </path>
                    <args>
                        -Dfile.encoding=UTF-8 -server
                        -Xms128m -Xmx4096m -XX:PermSize=196m -XX:MaxPermSize=128m
                        -XX:+DisableExplicitGC</args>
                    <libs>
                        <!-- <lib> -->
                        <!-- mysql:mysql-connector-java:${mysql-connector-version} -->
                        <!-- </lib> -->
                    </libs>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.tomee</groupId>
                        <artifactId>apache-tomee</artifactId>
                        <version>7.0.4</version>
                        <classifier>plume</classifier>
                        <type>zip</type>
                        <scope>runtime</scope>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
            </plugin>        
        </plugins>
    </build>
</project>